@@ -12,6 +12,7 @@ import feign.jackson.JacksonEncoder;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Component;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.Map;
 
@@ -39,7 +40,7 @@ public class AmazonEc2InstanceTypeHelper {
      */
     @Cacheable(cacheNames = CachingConfiguration.Repositories.CACHE_FOR_1W, key = "'amazon_ec2_instances_details'")
     public Map<String, InstanceModel.EC2InstanceType> getAmazonEc2InstanceTypeMap(AwsConfig.Aws config) throws Exception {
-        URL url = new URL(config.getEc2().getInstances());
+        URL url = URI.create(config.getEc2().getInstances()).toURL();
         AmazonEc2InstanceFeign awsEc2API = buildFeign(Joiner.on("://").join(url.getProtocol(),url.getHost()));
         return awsEc2API.getInstances(url.getPath());
     }
